--- a/index.html
+++ b/index.html
@@ -17,8 +17,19 @@
         <button type="button" class="btn btn-warning mt-5" onclick="start()">테스트 시작하기</button>
     </article>
     <article class="question">
-        <h2>문제</h2>
+        <div class="progress mt-5">
+            <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 25%"
+                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <h2 class="text-center  mt-5 ">문제</h2>
+        <input id="type" type="hidden" value="EI">
+        <button id="A" type="button" class="btn btn-warning  mt-5">Warning</button>
+        <button id="B" type="button" class="btn btn-warning  mt-5">Warning</button>
     </article>
+    <input type="hidden" id="EI" value="0">
+    <input type="hidden" id="SN" value="0">
+    <input type="hidden" id="TF" value="0">
+    <input type="hidden" id="JP" value="0">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -30,6 +41,12 @@
             $(".start").hide();
             $(".question").show();
         }
+
+        $("#A").click(function () {
+            var type = $("#type").val();
+            var preValue = $("#" + type).val();
+            $("#" + type).val(parseInt(preValue) + 1)
+        });
     </script>
 </body>
 
