--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </article>
     <article class="question">
         <div class="progress mt-5">
-            <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 25%"
+            <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: calc(100/12*1%)"
                 aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
-        <h2 class="text-center  mt-5 ">문제</h2>
+        <h2 id="title" class="text-center  mt-5 ">문제</h2>
         <input id="type" type="hidden" value="EI">
         <button id="A" type="button" class="btn btn-warning  mt-5">Warning</button>
         <button id="B" type="button" class="btn btn-warning  mt-5">Warning</button>
@@ -37,16 +37,39 @@
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
     <script>
+        var num = 1;
+        var q = {
+            1: { "title": "문제 1번", "type": "EI", "A": "E", "B": "I" },
+            2: { "title": "문제 2번", "type": "EI", "A": "E", "B": "I" },
+            3: { "title": "문제 3번", "type": "EI", "A": "E", "B": "I" },
+        }
+
+        function next() {
+            $(".progress-bar").attr('style', "width: calc(100/12*" + num + "%)");
+            $("#title").html(q[num]["title"]);
+            $("#type").val(q[num]["type"]);
+            $("#A").html(q[num]["A"]);
+            $("#B").html(q[num]["B"]);
+            num++
+        }
+
         function start() {
             $(".start").hide();
             $(".question").show();
+            next();
         }
 
         $("#A").click(function () {
             var type = $("#type").val();
             var preValue = $("#" + type).val();
             $("#" + type).val(parseInt(preValue) + 1)
+            next();
         });
+
+        $("#B").click(function () {
+            next();
+        });
+
     </script>
 </body>
 
