공유버튼추가

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <img class="rounded-pill" id="img" src="" alt="animal">
         <h2 class="text-center mt-5" id="animal">동물이름</h2>
         <h3 class="text-center mt-5" id="explain">설명</h3>
+
+        <!-- Go to www.addthis.com/dashboard to customize your tools -->
+        <div class="addthis_inline_share_toolbox share"></div>
+
     </article>
     <input type="hidden" id="EI" value="0">
     <input type="hidden" id="SN" value="0">
@@ -115,6 +119,9 @@
         });
 
     </script>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-632ac1fb141238e7"></script>
+
 </body>
 
 </html>
