--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <div class="addthis_inline_share_toolbox share"></div>
 
     </article>
+    <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-GGmtZfA7Aevf056n" data-ad-width="320"
+        data-ad-height="100"></ins>
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <input type="hidden" id="EI" value="0">
     <input type="hidden" id="SN" value="0">
     <input type="hidden" id="TF" value="0">
@@ -86,7 +89,7 @@
                 ($("#SN").val() < 2) ? mbti += "N" : mbti += "S";
                 ($("#TF").val() < 2) ? mbti += "F" : mbti += "T";
                 ($("#JP").val() < 2) ? mbti += "P" : mbti += "J";
-                alert(mbti);
+
                 $("#img").attr("src", result[mbti]["img"]);
                 $("#animal").html(result[mbti]["animal"]);
                 $("#explain").html(result[mbti]["explain"]);
